exracted some constants in .properties file

--- a/src/main/resources/driver.properties
+++ b/src/main/resources/driver.properties
@@ -1,3 +1,7 @@
+url=http://0.0.0.0:4723/wd/hub
+wait=60
 platform=Android
 path=com.google.android.gm
 activity=ConversationListActivityGmail
+unicodeKeyboard=true
+resetKeyboard=true
